--- a/main.scss
+++ b/main.scss
@@ -24,7 +24,7 @@ h1 {
   display: none;
 }
 
-.nav_container>ul {
+.nav_container > ul {
   display: none;
 }
 
@@ -35,7 +35,6 @@ h1 {
 .logo-small {
   width: 50px;
   height: 25px;
-
 }
 
 #small-logo {
@@ -188,7 +187,7 @@ span {
   padding-bottom: 100px;
 }
 
-.home2>p {
+.home2 > p {
   text-align: center;
   padding-top: 5%;
   z-index: 2;
@@ -238,7 +237,7 @@ h6 {
   padding-left: 20px;
 }
 
-.box-p>p {
+.box-p > p {
   font-size: 0.9em;
 }
 
@@ -318,7 +317,6 @@ footer {
 .spon-h {
   font-weight: 700;
   color: #d3d3d3;
-
 }
 
 .spon-p-div {
@@ -347,7 +345,7 @@ hr {
   justify-content: center;
   background-color: $black;
   width: 100vw;
-  height: fit-content;
+  height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -356,7 +354,7 @@ hr {
   padding: 0 40% 0 40%;
 }
 
-.sponsor1>img {
+.sponsor1 > img {
   width: 60px;
   height: 60px;
   margin: 20px;
@@ -436,7 +434,7 @@ hr {
     display: none;
   }
 
-  .nav_container>ul {
+  .nav_container > ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -464,7 +462,6 @@ hr {
   .logo-small {
     width: 50px;
     height: 25px;
-
   }
 
   #small-logo {
@@ -569,7 +566,7 @@ hr {
     justify-content: center;
     background-color: $black;
     width: 100vw;
-    height: fit-content;
+    height: auto;
     padding-top: 20px;
     padding-bottom: 20px;
   }
