--- a/main.scss
+++ b/main.scss
@@ -425,6 +425,38 @@ hr {
   line-height: 15px;
 }
 
+.about2-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.about2-txt {
+  width: 80%; 
+  font-size: 2em;
+  text-align: center;
+}
+
+.about2-logo {
+ width: 80%;
+ margin-bottom: 20px; 
+ padding-left: 25%;
+ border: 2px solid $grey;
+ padding-top: 10px;
+ padding-bottom: 10px;
+}
+
+.about-line {
+  width: 10%;
+  height: 5px;;
+}
+
+.about2-logo-img {
+  width: 60%;
+}
+
 @media screen and (min-width: 768px) {
   .nav_container {
     background-color: $black;
